--- a/styles.css
+++ b/styles.css
@@ -77,21 +77,24 @@ header>p{
 footer > a > img{
    width: 80px;
 }
+
 .floating-prompt-container {
    position: fixed;
+   display: flex;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(0, 0, 0, 0.5);
-   width: 300px;
-   padding: 20px;
-   border-radius: 10px;
+   width: 100%;
+   height: 100%;
  }
  
  .floating-prompt {
    background-color: white;
    padding: 20px;
    border-radius: 10px;
+   width: 300px;
+   margin: auto auto;
  }
  
  .floating-prompt h2 {
@@ -115,6 +118,10 @@ footer > a > img{
  
  .floating-prompt button:hover {
    background-color: #0056b3;
+ }
+ input{
+   border-radius: 5px;
+   font-size: 0.9rem
  }
 @media (min-width:1200px){ 
    header{
