Authentication popup UI
made the display better for both light and dark more for the Authentication popup

--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,8 @@ footer > a > img{
    border-radius: 10px;
    width: 300px;
    margin: auto auto;
+   background-color: #3f3e3e;
+   color: #808080;
  }
  
  .floating-prompt h2 {
